<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img1"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/feddate"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:background="#85eec912"
        android:ems="10"
        android:hint="@string/enter_date"
        android:inputType="date"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@android:color/holo_red_light"
        android:onClick="selectdate"
        android:text="@string/select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/feddate"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/selsubject"
        android:layout_width="160dp"
        android:layout_height="46dp"
        android:layout_marginStart="109dp"
        android:layout_marginLeft="109dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="109dp"
        android:layout_marginRight="109dp"
        android:background="#85eec912"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sdate" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="148dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="onclick"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ap" />

    <Spinner
        android:id="@+id/ap"
        android:layout_width="160dp"
        android:layout_height="46dp"
        android:layout_marginStart="109dp"
        android:layout_marginLeft="109dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="109dp"
        android:layout_marginRight="109dp"
        android:background="#85eec912"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selsubject" />

    <TextView
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:gravity="center_horizontal"
        android:text="@string/error"
        android:textColor="@color/colorAccent"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ap" />

    <Button
        android:id="@+id/showatt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="84dp"
        android:background="@color/colorPrimary"
        android:onClick="act"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/show_attendence"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:paddingLeft="100dp"
        android:paddingRight="0dp"
        android:text="@string/developed_by2"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="100dp"
        android:paddingEnd="0dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/abhishek_chaudhary2"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="60dp"
        android:paddingRight="0dp"
        android:text="@string/_2018ucs0087_iitjammu_ac_in2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingEnd="0dp"
        android:paddingStart="60dp" />

</android.support.constraint.ConstraintLayout>